fixed the alignment and some few things

--- a/styles.css
+++ b/styles.css
@@ -137,8 +137,6 @@ footer {
   bottom: 3px;
   left: 10px;
   align-items: center;
-  width: 100%;
-  right: 0;
 }
 
 
